<resources>
    <string name="app_name">Cloud village</string>
    <string name="linkman">Access</string>
    <string name="opendoorrecorddetail">Opening details</string>
    <string name="visitorphotodetail">Visitors take photos</string>
    <string name="App">App</string>
    <string name="accesscards">slot card</string>
    <string name="WIFI">WIFI</string>
    <string name="TemporaryPassword">Temporary password</string>
    <string name="Householdpassword">Resident password</string>
    <string name="bluetooth">BlueTooth</string>
    <string name="phonecall">telephone</string>
    <string name="versionupdate">Version updates</string>
    <string name="functionintroduction">Function Introduction</string>
    <string name="help">Help</string>
    <string name="message">Message</string>
    <string name="phone">Useful Numbers</string>
    <string name="monitor">Monitor</string>
    <string name="applykey">Apply  key</string>
    <string name="opendoor">Open list</string>
    <string name="visitorphoto">Visitorphoto</string>
    <string name="dd_function_parking">Parking</string>
    <string name="dd_function_finance">Financial Planning</string>
    <string name="repair">Repair</string>
    <string name="shapeopendoor">Shapeopendoor</string>
    <string name="dd_function_more"></string>
    <string name="pushservice">Pushservice</string>
    <string name="nightmode">Nightmode</string>
    <string name="attendedmode">Attendedmode（WIFI/Bluetooth）</string>
    <string name="openvideo_in_data_network">Open video in data network</string>
    <string name="about">About</string>
    <string name="isexit">Are you exit?</string>
    <string name="exit">Exit</string>
    <string name="cancel">Cancel</string>
    <string name="callphone">Are you sure you call this?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="copy_success">Copy success</string>
    <string name="tip_double_click_exit">Click exit again</string>
    <string name="main_tab_name_home">Homepage</string>
    <string name="main_tab_name_my">My</string>
    <string name="building">Temporary not open</string>
    <string name="back">Back</string>
    <string name="title_info">Title info</string>
    <string name="myfamily">My family</string>
    <string name="myhouse">My house</string>
    <string name="myvillage">My village</string>
    <string name="reset_password">Reset password</string>
    <string name="mypicture">My picture</string>
    <string name="newversion">New version</string>
    <string name="defaults">Defaults</string>
    <string name="settings">Set</string>
    <string name="loginout">Login out</string>
    <string name="cleansession">Clean session</string>
    <string name="autosettings">Auto setting</string>
    <string name="othersettings">Other setting</string>
    <string name="loginup">Login up</string>
    <string name="regeist">Regeist</string>
    <string name="refrush">Refrush</string>
    <string name="regeistAcount">Regeistacount</string>
    <string name="pleaseInputUsernmae">Please input username</string>
    <string name="pleaseInputPassword">Please input password</string>
    <string name="confirmPassword">Confirm password</string>
    <string name="pleaseInputPhone">Please input phone number</string>
    <string name="pleaseInputVerificationCode">Please input verificationcode</string>
    <string name="get_verification_code">Verification code</string>
    <string name="sure">Sure</string>
    <string name="user_name_can_not_empty">User name can not empty</string>
    <string name="verification_code_can_not_empty">Verification code can not empty</string>
    <string name="verification_code_mistake">Verification code mistake!</string>
    <string name="user_pwd_can_not_empty">User password can not empty</string>
    <string name="old_pwd_can_not_empty">Old passwore can not empty</string>
    <string name="old_pwd_mistake">Old password mistake!</string>
    <string name="phone_not_registered">Phone not registered!</string>
    <string name="phone_registered">The phone number has been registered!</string>
    <string name="pwd_not_same">Password not same!</string>
    <string name="old_new_same">The new password is consistent with the old password</string>
    <string name="confrim_pwd_can_not_empty">Confrim password can not empty!</string>
    <string name="get_verification_coding">The verification code is being obtained</string>
    <string name="pwd_failed">Password set fail!</string>
    <string name="tip">Hint</string>
    <string name="regeist_success">Regeist success!</string>
    <string name="loginging">Loginging</string>
    <string name="verifaction_failed">Verifaction failed!</string>
    <string name="reset_pwd">Reset password</string>
    <string name="inputNewPassword">Input new password</string>
    <string name="inputOldPassword">Input old password</string>
    <string name="update_pwd_succ">Change password success</string>
    <string name="update_pwd_failed">Change password failed</string>
    <string name="login_wait">Login wait···</string>
    <string name="list">List</string>
    <string name="handsFree">Hands free</string>
    <string name="spk">Intercom</string>
    <string name="picture">Photograph</string>
    <string name="lock">Unlocking</string>
    <string name="video">Video</string>
    <string name="reboot">Reboot</string>
    <string name="stop">Stop</string>
    <string name="reject">Reject</string>
    <string name="waiting_connection_30">Waiting connection 30%</string>
    <string name="waiting_certification_60">Waiting certification 60%</string>
    <string name="waiting_media_90">Wainting media 90%</string>
    <string name="errorCode">Error code:</string>
    <string name="mistake">Mistake</string>
    <string name="video1">Fluency</string>
    <string name="video2">Standard definition</string>
    <string name="video3">High definition</string>
    <string name="warn">Warn</string>
    <string name="no_permissions">You do not have privileges!</string>
    <string name="device_offline">Device offline</string>
    <string name="pleaseLogin">Pleaselogin</string>
    <string name="captureSuccess">The screenshots have been saved to the directory</string>
    <string name="islogin">This account is logged in</string>
    <string name="handup">Hang up</string>
    <string name="device_busy">The equipment is busy! Closed after (% 1 $ds)</string>
    <string name="vistor">There are new visitors. Are they answered?</string>
    <string name="accept">Accept</string>
    <string name="Ignore">Ignore</string>
    <string name="Notice">Notice</string>
    <string name="my_device">My device</string>
    <string name="auth_device">Auth device</string>
    <string name="warning">Warning!</string>
    <string name="login_other_plach_warning">Minute your account is logged in on another device. If not my own operation, may be password leakage!</string>
    <string name="login">Login / Registration</string>
    <string name="relogin"> ReLogin</string>
    <string name="loginSucc">Login Success</string>
    <string name="my_information_unlogin_tips">Log out</string>
    <string name="myuname">Account</string>
    <string name="mypsw">Password</string>
    <string name="server_connection_failed">Server connection failed!</string>
    <string name="device_connection_failed">Failed device connection!</string>
    <string name="server_disconnected">Server connection disconnect!</string>
    <string name="server_login_failed">Server login failed!</string>
    <string name="invalid_user_name">Denied!</string>
    <string name="incorrect_pwd">Password error</string>
    <string name="device_disconnected">Device connection disconnect!</string>
    <string name="server_busy">Server is too busy!</string>
    <string name="database_server_error">Database server error!</string>
    <string name="Systemerror">System error!</string>
    <string name="login_overtime">Login timeout, do you log in again?</string>
    <string name="no_network">Unable to connect to network, check network Settings</string>
    <string name="network_settings">Network</string>
    <string name="switchWIFI">WLAN</string>
    <string name="tip_choose_net">Currently in 3G/4G network, watching video will generate a lot of traffic fee, and it is recommended to use WLAN network!</string>
    <string name="continues">Continues</string>
    <string name="no_camera">There is no next device</string>
    <string name="first_camera">This is the first device</string>
    <string name="deviceName">Devicename</string>
    <string name="update">Modification</string>
    <string name="deviceMan">Equipment authorization account management</string>
    <string name="def">Default operating equipment</string>
    <string name="delete_device">Delete device</string>
    <string name="device_serial">Device serial</string>
    <string name="wait">wait···</string>
    <string name="suc">Success!</string>
    <string name="fail">Fail!</string>
    <string name="deldeteDevice">Are you sure you want to delete the device?</string>
    <string name="authorizationSer">Please enter the account that needs authorization</string>
    <string name="authorization">Accredit</string>
    <string name="empty_tip">Device name or serial number cannot be empty!</string>
    <string name="yesOrNo">Authorized!</string>
    <string name="deleteAuthorization">Delete the authorization?</string>
    <string name="openlock">Openlock</string>
    <string name="add">Add</string>
    <string name="deviceSer">Device serial number</string>
    <string name="wifiSearch">LAN Search</string>
    <string name="qrCode">QR code</string>
    <string name="addDevice">Add Device</string>
    <string name="serial_invalidate">Invalid device!</string>
    <string name="device_added">Add device success!</string>
    <string name="device_already_added">The device has been added (% s)!</string>
    <string name="serial_failed">Failed to add device!</string>
    <string name="scan_tips">Scan the qr code image on the scan box to automatically scan</string>
    <string name="not_open_service">The community has not opened this service</string>
    <string name="OPENFILE_ERROR">Open folder failed! Please check the SD card!</string>
    <string name="rootDir">Return root directory</string>
    <string name="upperDir">Return to the top</string>
    <string name="wifi">Wifi</string>
    <string name="recordSetting">Record Setup</string>
    <string name="researtDivece">Reboot</string>
    <string name="deviceMessage">Device info</string>
    <string name="alreadyconn">Connected</string>
    <string name="connectSucc">Connection successful</string>
    <string name="ConFailed">Connection Fail</string>
    <string name="apName">Hotspot Name</string>
    <string name="newPassword">New Password</string>
    <string name="againInput">Input again</string>
    <string name="spk_can_not_close">You can not close the talk on the phone!</string>
    <string name="video_get_data_error">Video failed, and you can continue to scroll around to watch other devices</string>
    <string name="video_stop_phone_comming">The door ban video has been suspended</string>
    <string name="video_play_error">video play error:</string>
    <string name="add_devcie_error">Add device error:</string>
    <string name="register_error">Registered account error:</string>
    <string name="no_device">No device</string>
    <string name="video_connect_quality_error">The current video connection is poor, and (%1$ds) closes this interface</string>
    <string name="audio_busy">Audio busy</string>
    <string name="please_talking">Please talking</string>
    <string name="tip_delete_user">You are sure to delete the account: %s?</string>
    <string name="tip_push_time">Someone called you at %s</string>
    <string name="forget_pwd">Forget password</string>
    <string name="i_know">I know</string>
    <string name="no_message">No message</string>
</resources>