<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#eee"
              android:orientation="vertical">

    <com.dongdong.app.widget.TitleBar
        android:id="@+id/tb_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_0"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/ll_rootview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                style="@style/option_item_rl"
                android:background="#eee">

                <TextView
                    style="@style/option_item_text"
                    android:text="@string/autosettings"
                    android:textSize="@dimen/text_size_14"/>
            </LinearLayout>

            <View style="@style/h_line"/>

            <RelativeLayout
                android:id="@+id/rl_push_service"
                style="@style/option_item_rl">

                <TextView
                    style="@style/option_item_text"
                    android:text="@string/pushservice"/>

                <com.dongdong.app.widget.SwitchButton
                    android:id="@+id/sb_pushservicebtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:visibility="gone"/>
            </RelativeLayout>

            <View style="@style/h_line"/>

            <RelativeLayout
                android:id="@+id/rl_nightmode"
                style="@style/option_item_rl">

                <TextView
                    style="@style/option_item_text"
                    android:text="@string/nightmode"/>

                <com.dongdong.app.widget.SwitchButton
                    android:id="@+id/sb_nightmodebtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:visibility="gone"/>
            </RelativeLayout>

            <View style="@style/h_line"/>

            <RelativeLayout
                android:id="@+id/rl_attended_mode"
                style="@style/option_item_rl">

                <TextView
                    style="@style/option_item_text"
                    android:text="@string/attendedmode"/>

                <com.dongdong.app.widget.SwitchButton
                    android:id="@+id/sb_attendedmodebtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:visibility="gone"/>
            </RelativeLayout>

            <View style="@style/h_line"/>

            <RelativeLayout
                android:id="@+id/rl_openvideo_in_data_network"
                style="@style/option_item_rl">

                <TextView
                    style="@style/option_item_text"
                    android:text="@string/openvideo_in_data_network"/>

                <com.dongdong.app.widget.SwitchButton
                    android:id="@+id/sb_openvideo_in_data_networkbtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:visibility="gone"/>
            </RelativeLayout>

            <View style="@style/h_line"/>

            <LinearLayout
                style="@style/option_item_rl"
                android:background="#eee">

                <TextView
                    style="@style/option_item_text"
                    android:text="@string/othersettings"
                    android:textSize="@dimen/text_size_14"/>
            </LinearLayout>

            <View style="@style/h_line"/>

            <RelativeLayout
                android:id="@+id/rl_clean_session"
                style="@style/option_item_rl">

                <TextView
                    style="@style/option_item_text"
                    android:text="@string/cleansession"/>
            </RelativeLayout>

            <View style="@style/h_line"/>

            <RelativeLayout
                android:id="@+id/rl_about"
                style="@style/option_item_rl">

                <TextView
                    style="@style/option_item_text"
                    android:text="@string/about"/>
            </RelativeLayout>

            <Button
                android:id="@+id/btn_loginout"
                style="@style/option_item_rl"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/loginout"
                android:textColor="#FF0000"
                android:textSize="@dimen/text_size_18"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>