<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.dongdong.app.widget.TitleBar
        android:id="@+id/tb_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tb_title"
        android:layout_margin="@dimen/space_20"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_0"
            android:layout_weight="1"
            android:background="@null"
            android:drawableLeft="@mipmap/phonenumber"
            android:drawablePadding="@dimen/space_10"
            android:hint="@string/pleaseInputPhone"
            android:inputType="numberSigned"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_16" />

        <View style="@style/h_line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_0"
            android:layout_marginTop="@dimen/space_20"
            android:layout_weight="1"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_smush"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:background="@null"
                android:drawableLeft="@mipmap/smush"
                android:drawablePadding="@dimen/space_10"
                android:hint="@string/pleaseInputVerificationCode"
                android:inputType="numberSigned"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_16" />

            <Button
                android:id="@+id/bt_smush"
                android:layout_width="@dimen/space_0"
                android:layout_height="@dimen/space_30"
                android:layout_weight="1"
                android:background="@drawable/btn_background"
                android:padding="@dimen/space_4"
                android:text="@string/get_verification_code"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_14" />
        </LinearLayout>

        <View style="@style/h_line" />

        <EditText
            android:id="@+id/et_pwd"
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_0"
            android:layout_marginTop="@dimen/space_20"
            android:layout_weight="1"
            android:background="@null"
            android:drawableLeft="@mipmap/password"
            android:drawablePadding="@dimen/space_10"
            android:hint="@string/inputNewPassword"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_16" />

        <View style="@style/h_line" />

        <EditText
            android:id="@+id/et_again_pwd"
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_0"
            android:layout_marginTop="@dimen/space_20"
            android:layout_weight="1"
            android:background="@null"
            android:drawableLeft="@mipmap/password"
            android:drawablePadding="@dimen/space_10"
            android:hint="@string/confirmPassword"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_16" />

        <Button
            android:id="@+id/bt_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_25"
            android:background="@drawable/btn_background"
            android:text="@string/sure"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_20" />
    </LinearLayout>

</RelativeLayout>