<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.dongdong.app.widget.TitleBar
        android:id="@+id/tb_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#f5f5f5"
        android:orientation="vertical"
        android:paddingLeft="@dimen/space_10"
        android:paddingRight="@dimen/space_10">

        <EditText
            android:id="@+id/et_device_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_30"
            android:layout_marginTop="@dimen/space_10"
            android:background="@drawable/background_write_drawable"
            android:hint="@string/deviceName"
            android:paddingLeft="@dimen/space_10"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_14" />

        <EditText
            android:id="@+id/et_device_serial"
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_30"
            android:background="@drawable/background_write_drawable"
            android:hint="@string/deviceSer"
            android:paddingLeft="@dimen/space_10"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_14" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_60"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bt_lan"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/space_15"
                android:layout_weight="1"
                android:background="@drawable/btn_background"
                android:text="@string/wifiSearch"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_16" />


            <Button
                android:id="@+id/bt_rc_code"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/space_15"
                android:layout_weight="1"
                android:background="@drawable/btn_background"
                android:text="@string/qrCode"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_16" />
        </LinearLayout>

        <ListView
            android:id="@+id/lv_list_account"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:cacheColorHint="#00000000"
            android:choiceMode="singleChoice"
            android:divider="#eee"
            android:dividerHeight="@dimen/space_1"
            android:drawSelectorOnTop="false"
            android:footerDividersEnabled="false" />
    </LinearLayout>

</LinearLayout>